# ofxYoloSolo

./: .gitignore  LICENSE  README.md  addon_config.mk
example-yolo3/: CMakeLists.txt  addons.make
example-yolo3/cmake/: FindGStreamer.cmake  addons.cmake  linux64.cmake
example-yolo3/scripts/: incrementBuildNumber.sh  rename_project.sh
example-yolo3/src/: ofApp.cpp  ofApp.h
libs/darknet/include/: classifier.h  data.h  list.h  option_list.h  rnn.h  utils.h
libs/darknet/lib/linux64/: libdarknet.so_no_gpu
src/: ofxYoloSolo.cpp  ofxYoloSolo.h
